test/compile-fail/resolution/use/mod-file-no-name/expected.txt
error[E0425]: unresolved item `b`
  ┌─ ./test/compile-fail/resolution/use/mod-file-no-name/top.rhdl:2:8
  │
2 │ use a::b;
  │        ^ no `b` item in `a`

